# tiny-harness

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  USER-GUIDE.md  base-dark.css  index.html  pyproject.toml  run_cartpole_test.py
docs/: cli.md  code-style.md  gotchas.md  index.html  skills.md  thoughts.md
docs/adr/: 0001-tools-as-external-plugins.md  0002-prompt-as-first-class-artifact.md  0003-single-use-agent-lifecycle.md
docs/agent-loop/: 01-core-loop.md
docs/config/: 01-configuration-model.md
docs/filesystem/: 01-file-tools.md  02-path-safety.md
docs/hitl/: 01-human-in-the-loop.md
docs/llm-provider/: 01-provider-abstraction.md  02-error-handling.md
docs/message-manager/: 01-message-structure.md  02-context-management.md
docs/tools/: 01-first-principles.md  02-tool-definition-format.md  (+5 more)
examples/: 01_basic_chat.py  02_file_tools.py  03_custom_tool.py  04_streaming.py  05_session.py  06_shell_tools.py  07_search_tools.py  08_multi_skill.py  build_all.py  build_cartpole.py  build_pingpong.py  build_snake.py
prompts/: default.md
tests/: test_agent.py  test_cli.py  test_config.py  test_events.py  test_file_tools.py  test_file_tools_edge.py  test_guard.py  test_hitl.py  test_integration.py  test_llm_provider.py  test_llm_types.py  test_loop.py  test_messages.py  test_persist.py  test_search_tools.py  test_shell_tools.py  test_skill_files.py  test_tools.py  test_tui.py
tiny_harness/: __init__.py  __main__.py  _config.py  _core.py  _events.py  _guard.py  _hitl.py  _llm.py  _loop.py  _messages.py  _persist.py  _tools.py  cli.py  tui.py
(+12 files in other folders)
