[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-harness"
version = "0.1.0"
description = "Minimal AI agent harness"
requires-python = ">=3.11"
dependencies = ["httpx>=0.27.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
tui = ["rich>=13.0.0"]

[project.scripts]
tiny-harness = "tiny_harness.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: integration tests requiring API key"]
